# random_match_api

./: .env  Cargo.toml  diesel.toml
migrations/2025-01-10-015716_create_users_table/: down.sql  up.sql
migrations/2025-01-10-095433_create_match_table/: up.sql
src/: main.rs
src/controllers/: auth_controller.rs  mod.rs  profile_controller.rs  random_match_controller.rs
src/database/: mod.rs
src/dtos/: api_response.rs  auth_tokens.rs  mod.rs  pagination.rs  social_login_requet.rs  social_user.rs
src/middlewares/: json_extractor.rs  mod.rs  require_auth.rs
src/models/: auth_user.rs  mod.rs  random_match.rs  schema.rs
src/routes/: auth_routes.rs  mod.rs  profile_route.rs  random_match_routes.rs
src/services/: auth_service.rs  mod.rs  profile_service.rs  random_match_service.rs
src/socket/: mod.rs  random_match.rs
src/utils/: app_error.rs
