[package]
name = "randomapi"
version = "0.1.0"
edition = "2021"



[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.0"

validator = { version = "*", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.3", features = ["serde", "v4",] }
jsonwebtoken = "8.3.0"
chrono = { version = "0.4.24", features = ["serde",] }
socketioxide = {version = "0.15.1",features = ["state","extensions"] }
livekit-api = "0.2.0"
sqlx = { version = "0.8.3", features = ["postgres", "chrono", "uuid","runtime-tokio-rustls"] }